--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
   <head>
     <meta charset="utf-8">
@@ -8,151 +8,156 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
-  <body class="page__body">
-    <header class="page-header wrapper">
-      <nav class="page-header__nav main-nav">
-        <a class="main-nav__logo" href="#">
-          <img class="main-nav__logo-img" src="images/logo.svg" width="140" height="70" alt="Логотип курорта Седона">
-        </a>
-        <ul class="main-nav__list site-nav">
-          <li class="site-nav__item">
-            <a class="site-nav__link site-nav__link--current" href="#">Главная</a>
-          </li>
-          <li class="site-nav__item">
-            <a class="site-nav__link" href="#">О седоне</a>
-          </li>
-          <li class="site-nav__item">
-            <a class="site-nav__link" href="catalog.html">Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="main-nav__list user-nav">
-          <li class="user-nav__item">
-            <a class="user-nav__link" href="#"><span class="visually-hidden">Поиск</span></a>
-          </li>
-          <li class="user-nav__item">
-            <a class="user-nav__link" href="#">
-              <span class="visually-hidden">Понравилось</span>
-              <span class="user-nav__likes-badge">12</span>
+  <body>
+    <div class="page-body">
+
+      <header class="page-header">
+        <nav class="page-header__nav main-nav">
+          <a class="main-nav__logo" href="#">
+            <img class="main-nav__logo-img" src="images/logo.svg" width="140" height="70" alt="Логотип курорта Седона">
+          </a>
+          <ul class="main-nav__list site-nav">
+            <li class="site-nav__item">
+              <a class="site-nav__link site-nav__link--current" href="#">Главная</a>
+            </li>
+            <li class="site-nav__item">
+              <a class="site-nav__link" href="#">О седоне</a>
+            </li>
+            <li class="site-nav__item">
+              <a class="site-nav__link" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="main-nav__list user-nav">
+            <li class="user-nav__item">
+              <a class="user-nav__link" href="#"><span class="visually-hidden">Поиск</span></a>
+            </li>
+            <li class="user-nav__item">
+              <a class="user-nav__link" href="#">
+                <span class="visually-hidden">Понравилось</span>
+                <span class="user-nav__likes-badge">12</span>
+              </a>
+            </li>
+            <li class="user-nav__item">
+              <a class="user-nav__link button button--basic" href="catalog.html">Хочу сюда!</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
+      <main>
+        <section class="invite">
+          <h1 class="visually-hidden">Приглашение в Седону</h1>
+          <img class="invite__img" src="images/welcome.svg" width="458" height="352"
+            alt="Welcome to the gorgeous Sedona, becoouse the Grand Canyon sucks">
+        </section>
+        <section class="advantages">
+          <h2 class="visually-hidden">Преимущества Седоны</h2>
+          <p class="advantages__slogan second-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="advantages__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон</p>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <div class="advantages__description">
+                <h3 class="advantages__title third-title">Настоящий городок</h3>
+                <p class="advantages__text">Седона не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
+              <img class="advantages__img" src="images/advantage-photo-1.jpg" width="800" height="385"
+                alt="Вид на улицу Седоны">
+            </li>
+            <li class="advantages__item">
+              <div class="advantages__description">
+                <h3 class="advantages__title third-title">Небольшая площадь</h3>
+                <p class="advantages__text">Все достопримечательности находятся очень близко</p>
+              </div>
+            </li>
+            <li class="advantages__item">
+              <div class="advantages__description">
+                <h3 class="advantages__title third-title">Красивая дорога</h3>
+                <p class="advantages__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </div>
+            </li>
+            <li class="advantages__item">
+              <div class="advantages__description">
+                <h3 class="advantages__title third-title">Мало туристов</h3>
+                <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
+              </div>
+            </li>
+            <li class="advantages__item advantages__item--reverse">
+              <div class="advantages__description">
+                <h3 class="advantages__title third-title">Там есть мост дьявола</h3>
+                <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется!</p>
+              </div>
+              <img class="advantages__img" src="images/advantage-photo-2.jpg" width="800" height="385"
+                alt="Вид на мост Дьявола">
+            </li>
+          </ul>
+        </section>
+        <section class="services">
+          <h2 class="visually-hidden">Сервисы в Седоне</h2>
+          <p class="services__slogan second-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+          <p class="services__intro">Опытный персонал и качественное обслуживание!</p>
+          <ul class="services__list">
+            <li class="services__item services__item--home">
+              <h3 class="services__title third-title">Жильё</h3>
+              <p class="services__description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
+            </li>
+            <li class="services__item services__item--eat">
+              <h3 class="services__title third-title">Еда</h3>
+              <p class="services__description">Всегда заказывайте<br> топовый фирменый бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="services__item services__item--gift">
+              <h3 class="services__title third-title">Сувениры</h3>
+              <p class="services__description">Не только китайского,<br> но и настоящего местного производства!</p>
+            </li>
+          </ul>
+        </section>
+        <section class="search">
+          <h2 class="visually-hidden">Бронирование отеля</h2>
+          <p class="search__title second-title">Заинтересовались?</p>
+          <p class="search__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц
+            в
+            Седоне</p>
+          <a class="search__link button button--basic" href="catalog.html">Поиск гостиницы в Седоне</a>
+        </section>
+        <section class="subscribe subscribe--bg">
+          <h2 class="visually-hidden">Форма подписки на рассылку</h2>
+          <p class="subscribe__title second-title">Подпишитесь на рассылку</p>
+          <p class="subscribe__text">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+          <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post" id="subscribe-form">
+            <label class="visually-hidden" for="subscribe-form-email">E-mail</label>
+            <input class="subscribe__input input" type="email" name="subscribe-email" id="subscribe-form-email"
+              placeholder="Ваш e-mail" required>
+            <button class="subscribe__button button button--second" type="submit">Подписаться</button>
+          </form>
+        </section>
+      </main>
+
+      <footer class="page-footer">
+        <ul class="page-footer__list socials">
+          <li class="socials__item">
+            <a class="socials__link" href="#">
+              <span class="visually-hidden">Мы в ВКонтакте</span>
             </a>
           </li>
-          <li class="user-nav__item">
-            <a class="user-nav__link button button--basic" href="catalog.html">Хочу сюда!</a>
+          <li class="socials__item">
+            <a class="socials__link" href="#">
+              <span class="visually-hidden">Мы в Телеграме</span>
+            </a>
+          </li>
+          <li class="socials__item">
+            <a class="socials__link" href="#">
+              <span class="visually-hidden">Мы в Ютубе</span>
+            </a>
           </li>
         </ul>
-      </nav>
-    </header>
+        <address class="page-footer__address">
+          <a class="page-footer__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </address>
+        <a class="page-footer__copyright" href="#">
+          <span class="visually-hidden">Логотип HTML Academy</span>
+        </a>
+      </footer>
 
-    <main>
-      <section class="invite wrapper">
-        <h1 class="visually-hidden">Приглашение в Седону</h1>
-        <img class="invite__img" src="images/welcome.svg" width="458" height="352"
-          alt="Welcome to the gorgeous Sedona, becoouse the Grand Canyon sucks">
-      </section>
-      <section class="advantages  wrapper">
-        <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <p class="advantages__slogan second-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
-        <p class="advantages__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон</p>
-        <ul class="advantages__list">
-          <li class="advantages__item">
-            <div class="advantages__description">
-              <h3 class="advantages__title third-title">Настоящий городок</h3>
-              <p class="advantages__text">Седона не аттракцион для туристов, там течёт своя жизнь</p>
-            </div>
-            <img class="advantages__img" src="images/advantage-photo-1.jpg" width="800" height="385"
-              alt="Вид на улицу Седоны">
-          </li>
-          <li class="advantages__item">
-            <div class="advantages__description">
-              <h3 class="advantages__title third-title">Небольшая площадь</h3>
-              <p class="advantages__text">Все достопримечательности находятся очень близко</p>
-            </div>
-          </li>
-          <li class="advantages__item">
-            <div class="advantages__description">
-            <h3 class="advantages__title third-title">Красивая дорога</h3>
-            <p class="advantages__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </div>
-          </li>
-          <li class="advantages__item">
-            <div class="advantages__description">
-            <h3 class="advantages__title third-title">Мало туристов</h3>
-            <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
-            </div>
-          </li>
-          <li class="advantages__item advantages__item--reverse">
-            <div class="advantages__description">
-              <h3 class="advantages__title third-title">Там есть мост дьявола</h3>
-              <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется!</p>
-            </div>
-            <img class="advantages__img" src="images/advantage-photo-2.jpg" width="800" height="385"
-              alt="Вид на мост Дьявола">
-          </li>
-        </ul>
-      </section>
-      <section class="services  wrapper">
-        <h2 class="visually-hidden">Сервисы в Седоне</h2>
-        <p class="services__slogan second-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
-        <p class="services__intro">Опытный персонал и качественное обслуживание!</p>
-        <ul class="services__list">
-          <li class="services__item services__item--home">
-            <h3 class="services__title third-title">Жильё</h3>
-            <p class="services__description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
-          </li>
-          <li class="services__item services__item--eat">
-            <h3 class="services__title third-title">Еда</h3>
-            <p class="services__description">Всегда заказывайте<br> топовый фирменый бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="services__item services__item--gift">
-            <h3 class="services__title third-title">Сувениры</h3>
-            <p class="services__description">Не только китайского,<br> но и настоящего местного производства!</p>
-          </li>
-        </ul>
-      </section>
-      <section class="search wrapper">
-        <h2 class="visually-hidden">Бронирование отеля</h2>
-        <p class="search__title second-title">Заинтересовались?</p>
-        <p class="search__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в
-          Седоне</p>
-        <a class="search__link button button--basic" href="catalog.html">Поиск гостиницы в Седоне</a>
-      </section>
-      <section class="subscribe subscribe--bg wrapper">
-        <h2 class="visually-hidden">Форма подписки на рассылку</h2>
-        <p class="subscribe__title second-title">Подпишитесь на рассылку</p>
-        <p class="subscribe__text">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
-        <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post" id="subscribe-form">
-          <label class="visually-hidden" for="subscribe-form-email">E-mail</label>
-          <input class="subscribe__input input" type="email" name="subscribe-email" id="subscribe-form-email"
-            placeholder="Ваш e-mail" required>
-          <button class="subscribe__button button button--second" type="submit">Подписаться</button>
-        </form>
-      </section>
-    </main>
-
-    <footer class="page-footer wrapper">
-      <ul class="page-footer__list socials">
-        <li class="socials__item">
-          <a class="socials__link" href="#">
-            <span class="visually-hidden">Мы в ВКонтакте</span>
-          </a>
-        </li>
-        <li class="socials__item">
-          <a class="socials_link" href="#">
-            <span class="visually-hidden">Мы в Телеграме</span>
-          </a>
-        </li>
-        <li class="socials__item">
-          <a class="socials__link" href="#">
-            <span class="visually-hidden">Мы в Ютубе</span>
-          </a>
-        </li>
-      </ul>
-      <address class="page-footer__address">
-        <a class="page-footer__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      </address>
-      <a class="page-footer__copyright" href="#">
-        <span class="visually-hidden">Логотип HTML Academy</span>
-      </a>
-    </footer>
+    </div>
   </body>
 
 </html>
